--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -681,7 +681,165 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 46.67 / 155 (30.1%):  97%|█████████▋| 155/160 [04:32<00:09,  1.88s/it]"
+      "Average Metric: 47.33 / 160 (29.6%): 100%|██████████| 160/160 [04:43<00:00,  1.77s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:40:41 INFO dspy.evaluate.evaluate: Average Metric: 47.33333333333335 / 160 (29.6%)\n",
+      "2025/03/13 20:40:41 INFO dspy.teleprompt.mipro_optimizer_v2: Default program score: 29.58\n",
+      "\n",
+      "/Users/aidand/dev/hello-dspy/env/lib/python3.10/site-packages/optuna/_experimental.py:31: ExperimentalWarning: Argument ``multivariate`` is an experimental feature. The interface can change in the future.\n",
+      "  warnings.warn(\n",
+      "2025/03/13 20:40:41 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 2 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 25.67 / 40 (64.2%): 100%|██████████| 40/40 [01:27<00:00,  2.18s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:42:08 INFO dspy.evaluate.evaluate: Average Metric: 25.66666666666666 / 40 (64.2%)\n",
+      "2025/03/13 20:42:08 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 64.17 on minibatch of size 40 with parameters ['Predictor 0: Instruction 1', 'Predictor 0: Few-Shot Set 3', 'Predictor 1: Instruction 8', 'Predictor 1: Few-Shot Set 5'].\n",
+      "2025/03/13 20:42:08 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17]\n",
+      "2025/03/13 20:42:08 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58]\n",
+      "2025/03/13 20:42:08 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 29.58\n",
+      "2025/03/13 20:42:08 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:42:08 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 3 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 21.67 / 40 (54.2%): 100%|██████████| 40/40 [01:42<00:00,  2.56s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:43:50 INFO dspy.evaluate.evaluate: Average Metric: 21.666666666666668 / 40 (54.2%)\n",
+      "2025/03/13 20:43:50 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 54.17 on minibatch of size 40 with parameters ['Predictor 0: Instruction 0', 'Predictor 0: Few-Shot Set 3', 'Predictor 1: Instruction 8', 'Predictor 1: Few-Shot Set 1'].\n",
+      "2025/03/13 20:43:50 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17]\n",
+      "2025/03/13 20:43:50 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58]\n",
+      "2025/03/13 20:43:50 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 29.58\n",
+      "2025/03/13 20:43:50 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:43:50 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 4 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 26.33 / 40 (65.8%): 100%|██████████| 40/40 [01:32<00:00,  2.30s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:45:22 INFO dspy.evaluate.evaluate: Average Metric: 26.333333333333332 / 40 (65.8%)\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 65.83 on minibatch of size 40 with parameters ['Predictor 0: Instruction 8', 'Predictor 0: Few-Shot Set 2', 'Predictor 1: Instruction 8', 'Predictor 1: Few-Shot Set 3'].\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83]\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58]\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 29.58\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 5 / 32 - Full Evaluation =====\n",
+      "2025/03/13 20:45:22 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 65.83) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 100.00 / 160 (62.5%): 100%|██████████| 160/160 [02:58<00:00,  1.11s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:48:21 INFO dspy.evaluate.evaluate: Average Metric: 100.00000000000003 / 160 (62.5%)\n",
+      "2025/03/13 20:48:21 INFO dspy.teleprompt.mipro_optimizer_v2: \u001b[92mNew best full eval score!\u001b[0m Score: 62.5\n",
+      "2025/03/13 20:48:21 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5]\n",
+      "2025/03/13 20:48:21 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:48:21 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 20:48:21 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 20:48:21 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 6 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 20.67 / 40 (51.7%): 100%|██████████| 40/40 [01:23<00:00,  2.09s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:49:44 INFO dspy.evaluate.evaluate: Average Metric: 20.666666666666668 / 40 (51.7%)\n",
+      "2025/03/13 20:49:44 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 51.67 on minibatch of size 40 with parameters ['Predictor 0: Instruction 5', 'Predictor 0: Few-Shot Set 4', 'Predictor 1: Instruction 3', 'Predictor 1: Few-Shot Set 0'].\n",
+      "2025/03/13 20:49:44 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67]\n",
+      "2025/03/13 20:49:44 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5]\n",
+      "2025/03/13 20:49:44 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:49:44 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:49:44 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 7 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 20.33 / 40 (50.8%): 100%|██████████| 40/40 [00:58<00:00,  1.45s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:50:42 INFO dspy.evaluate.evaluate: Average Metric: 20.33333333333333 / 40 (50.8%)\n",
+      "2025/03/13 20:50:42 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 50.83 on minibatch of size 40 with parameters ['Predictor 0: Instruction 3', 'Predictor 0: Few-Shot Set 7', 'Predictor 1: Instruction 0', 'Predictor 1: Few-Shot Set 6'].\n",
+      "2025/03/13 20:50:42 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67, 50.83]\n",
+      "2025/03/13 20:50:42 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5]\n",
+      "2025/03/13 20:50:42 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:50:42 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:50:42 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 8 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 17.00 / 25 (68.0%):  62%|██████▎   | 25/40 [00:45<00:28,  1.92s/it]"
      ]
     }
    ],
@@ -698,7 +856,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "evaluate(Hop())"
+   ]
   }
  ],
  "metadata": {
