--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -839,7 +839,31 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average Metric: 17.00 / 25 (68.0%):  62%|██████▎   | 25/40 [00:45<00:28,  1.92s/it]"
+      "Average Metric: 27.00 / 40 (67.5%): 100%|██████████| 40/40 [01:27<00:00,  2.18s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:52:10 INFO dspy.evaluate.evaluate: Average Metric: 27.000000000000004 / 40 (67.5%)\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 67.5 on minibatch of size 40 with parameters ['Predictor 0: Instruction 4', 'Predictor 0: Few-Shot Set 0', 'Predictor 1: Instruction 7', 'Predictor 1: Few-Shot Set 3'].\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67, 50.83, 67.5]\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5]\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: =========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 9 / 32 - Full Evaluation =====\n",
+      "2025/03/13 20:52:10 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 67.5) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 56.33 / 91 (61.9%):  57%|█████▋    | 91/160 [01:46<00:59,  1.16it/s]"
      ]
     }
    ],
