--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,19 @@
       "Looking in indexes: https://flashinfer.ai/whl/cu121/torch2.4/\n",
       "Collecting flashinfer\n",
       "  Downloading https://github.com/flashinfer-ai/flashinfer/releases/download/v0.2.0.post1/flashinfer-0.2.0.post1%2Bcu121torch2.4-cp310-cp310-linux_x86_64.whl (405.8 MB)\n",
-      "\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━\u001b[0m \u001b[32m272.6/405.8 MB\u001b[0m \u001b[31m47.1 MB/s\u001b[0m eta \u001b[36m0:00:03\u001b[0m"
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m405.8/405.8 MB\u001b[0m \u001b[31m39.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hINFO: pip is looking at multiple versions of flashinfer to determine which version is compatible with other requirements. This could take a while.\n",
+      "  Downloading https://github.com/flashinfer-ai/flashinfer/releases/download/v0.2.0/flashinfer-0.2.0%2Bcu121torch2.4-cp310-cp310-linux_x86_64.whl (405.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m405.8/405.8 MB\u001b[0m \u001b[31m39.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h  Downloading https://github.com/flashinfer-ai/flashinfer/releases/download/v0.1.6/flashinfer-0.1.6%2Bcu121torch2.4-cp310-cp310-linux_x86_64.whl (1322.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 GB\u001b[0m \u001b[31m23.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: flashinfer\n",
+      "  Attempting uninstall: flashinfer\n",
+      "    Found existing installation: flashinfer 0.1.6+cu121torch2.4\n",
+      "    Uninstalling flashinfer-0.1.6+cu121torch2.4:\n",
+      "      Successfully uninstalled flashinfer-0.1.6+cu121torch2.4\n",
+      "Successfully installed flashinfer-0.1.6+cu121torch2.4\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -234,14 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 03-13 20:57:40 __init__.py:190] Automatically detected platform cuda.\n",
+      "INFO 03-13 21:01:20 __init__.py:190] Automatically detected platform cuda.\n",
       "Traceback (most recent call last):\n",
       "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/runpy.py\", line 196, in _run_module_as_main\n",
       "    return _run_code(code, main_globals, None,\n",
@@ -277,7 +289,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import dspy\n",
+    "\n",
+    "class CreateOnePrompt(dspy.Signature):\n",
+    "    \"\"\"\n",
+    "    You are a helpful assistant that is very mindful of user privacy. You have access to a powerful large language model that you can query. Given a user request, create a prompt for your large language model that preserves user privacy, so that this model can help you complete the user request. Provide the prompt directly without any preamble. DO NOT COMPLETE THE USER QUERY, ONLY GENERATE A PROMPT.\n",
+    "    \"\"\"\n",
+    "    userQuery = dspy.InputField(desc=\"The user's request to be fulfilled.\")\n",
+    "    createdPrompt = dspy.OutputField()\n",
+    "\n",
+    "class InfoAggregator(dspy.Signature):\n",
+    "    \"\"\"\n",
+    "    You are a helpful assistant. Respond to queries from the user.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    userQuery = dspy.InputField(desc=\"The user's request to be fulfilled.\")\n",
+    "    modelExampleResponses = dspy.InputField(desc=\"Information from a more powerful language model responding to related queries. Complete the user query by referencing this information. Only you have access to this information.\")\n",
+    "    finalOutput = dspy.OutputField()\n",
+    "\n",
+    "class PAPILLON(dspy.Module):\n",
+    "    def __init__(self, untrusted_model):\n",
+    "        self.prompt_creater = dspy.ChainOfThought(CreateOnePrompt)\n",
+    "        self.info_aggregator = dspy.Predict(InfoAggregator)\n",
+    "        self.untrusted_model = untrusted_model\n",
+    "\n",
+    "    def forward(self, user_query):\n",
+    "        try:\n",
+    "            prompt = self.prompt_creater(userQuery=user_query).createdPrompt\n",
+    "            response = self.untrusted_model(prompt)[0]\n",
+    "            output = self.info_aggregator(userQuery=user_query, modelExampleResponses=response)\n",
+    "        except Exception:\n",
+    "            return dspy.Prediction(prompt=\"\", output=\"\", gptResponse=\"\")\n",
+    "\n",
+    "        return dspy.Prediction(prompt=prompt, output=output.finalOutput, gptResponse=response)"
+   ]
   }
  ],
  "metadata": {
