--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -863,7 +863,112 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average Metric: 56.33 / 91 (61.9%):  57%|█████▋    | 91/160 [01:46<00:59,  1.16it/s]"
+      "Average Metric: 88.67 / 143 (62.0%):  89%|████████▉ | 142/160 [02:48<00:17,  1.02it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:55:10 ERROR dspy.utils.parallelizer: Error for Example({'claim': 'Fredric March costarred in 1935 Australian drama film that Frances Drake is best know for, with the husband of Elsa Lanchester.', 'titles': ['Les Misérables (1935 film)', 'Frances Drake', 'Charles Laughton']}) (input_keys={'claim'}): Expected dict_keys(['reasoning', 'new_notes', 'titles']) but got dict_keys(['reasoning']). Set `provide_traceback=True` for traceback.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 99.67 / 159 (62.7%): 100%|██████████| 160/160 [03:47<00:00,  1.42s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:55:57 INFO dspy.evaluate.evaluate: Average Metric: 99.66666666666673 / 160 (62.3%)\n",
+      "2025/03/13 20:55:57 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5, 62.29]\n",
+      "2025/03/13 20:55:57 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:55:57 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 20:55:57 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 20:55:57 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 10 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 25.00 / 40 (62.5%): 100%|██████████| 40/40 [01:29<00:00,  2.25s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:57:27 INFO dspy.evaluate.evaluate: Average Metric: 25.000000000000004 / 40 (62.5%)\n",
+      "2025/03/13 20:57:27 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 62.5 on minibatch of size 40 with parameters ['Predictor 0: Instruction 8', 'Predictor 0: Few-Shot Set 7', 'Predictor 1: Instruction 1', 'Predictor 1: Few-Shot Set 3'].\n",
+      "2025/03/13 20:57:27 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67, 50.83, 67.5, 62.5]\n",
+      "2025/03/13 20:57:27 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5, 62.29]\n",
+      "2025/03/13 20:57:27 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:57:27 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:57:27 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 11 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 27.33 / 40 (68.3%): 100%|██████████| 40/40 [02:11<00:00,  3.28s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 20:59:38 INFO dspy.evaluate.evaluate: Average Metric: 27.333333333333343 / 40 (68.3%)\n",
+      "2025/03/13 20:59:38 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 68.33 on minibatch of size 40 with parameters ['Predictor 0: Instruction 1', 'Predictor 0: Few-Shot Set 0', 'Predictor 1: Instruction 7', 'Predictor 1: Few-Shot Set 3'].\n",
+      "2025/03/13 20:59:38 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67, 50.83, 67.5, 62.5, 68.33]\n",
+      "2025/03/13 20:59:38 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5, 62.29]\n",
+      "2025/03/13 20:59:38 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 20:59:38 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 20:59:38 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 12 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 27.00 / 40 (67.5%): 100%|██████████| 40/40 [01:24<00:00,  2.12s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 21:01:03 INFO dspy.evaluate.evaluate: Average Metric: 27.0 / 40 (67.5%)\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 67.5 on minibatch of size 40 with parameters ['Predictor 0: Instruction 5', 'Predictor 0: Few-Shot Set 5', 'Predictor 1: Instruction 7', 'Predictor 1: Few-Shot Set 3'].\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67, 50.83, 67.5, 62.5, 68.33, 67.5]\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5, 62.29]\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 62.5\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: ===== Trial 13 / 32 - Full Evaluation =====\n",
+      "2025/03/13 21:01:03 INFO dspy.teleprompt.mipro_optimizer_v2: Doing full eval on next top averaging program (Avg Score: 68.33) from minibatch trials...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 87.33 / 136 (64.2%):  85%|████████▌ | 136/160 [03:06<00:48,  2.03s/it]"
      ]
     }
    ],
