--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,15 @@
       "Looking in indexes: https://flashinfer.ai/whl/cu121/torch2.4/\n",
       "Collecting flashinfer\n",
       "  Downloading https://github.com/flashinfer-ai/flashinfer/releases/download/v0.2.0.post1/flashinfer-0.2.0.post1%2Bcu121torch2.4-cp310-cp310-linux_x86_64.whl (405.8 MB)\n",
-      "\u001b[2K     \u001b[91m━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.0/405.8 MB\u001b[0m \u001b[31m18.6 MB/s\u001b[0m eta \u001b[36m0:00:21\u001b[0m"
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m405.8/405.8 MB\u001b[0m \u001b[31m11.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:02\u001b[0m\n",
+      "\u001b[?25hINFO: pip is looking at multiple versions of flashinfer to determine which version is compatible with other requirements. This could take a while.\n",
+      "  Downloading https://github.com/flashinfer-ai/flashinfer/releases/download/v0.2.0/flashinfer-0.2.0%2Bcu121torch2.4-cp310-cp310-linux_x86_64.whl (405.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m405.8/405.8 MB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25h  Downloading https://github.com/flashinfer-ai/flashinfer/releases/download/v0.1.6/flashinfer-0.1.6%2Bcu121torch2.4-cp310-cp310-linux_x86_64.whl (1322.8 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 GB\u001b[0m \u001b[31m7.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:04\u001b[0mm\n",
+      "\u001b[?25hInstalling collected packages: flashinfer\n",
+      "Successfully installed flashinfer-0.1.6+cu121torch2.4\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
@@ -606,36 +614,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 03-13 21:01:20 __init__.py:190] Automatically detected platform cuda.\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/runpy.py\", line 196, in _run_module_as_main\n",
-      "    return _run_code(code, main_globals, None,\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/runpy.py\", line 86, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/launch_server.py\", line 6, in <module>\n",
-      "    from sglang.srt.entrypoints.http_server import launch_server\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/entrypoints/http_server.py\", line 44, in <module>\n",
-      "    from sglang.srt.entrypoints.engine import _launch_subprocesses\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/entrypoints/engine.py\", line 36, in <module>\n",
-      "    from sglang.srt.managers.data_parallel_controller import (\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/data_parallel_controller.py\", line 31, in <module>\n",
-      "    from sglang.srt.managers.scheduler import run_scheduler_process\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/scheduler.py\", line 89, in <module>\n",
-      "    from sglang.srt.managers.tp_worker import TpModelWorker\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/tp_worker.py\", line 35, in <module>\n",
-      "    from sglang.srt.model_executor.model_runner import ModelRunner\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_executor/model_runner.py\", line 39, in <module>\n",
-      "    from sglang.srt.layers.attention.flashinfer_backend import FlashInferAttnBackend\n",
-      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/layers/attention/flashinfer_backend.py\", line 38, in <module>\n",
-      "    from flashinfer.decode import _get_range_buf, get_seq_lens\n",
-      "ImportError: cannot import name '_get_range_buf' from 'flashinfer.decode' (/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/flashinfer/decode.py)\n"
+      "INFO 03-13 21:16:27 __init__.py:190] Automatically detected platform cuda.\n",
+      "[2025-03-13 21:16:33] server_args=ServerArgs(model_path='meta-llama/Llama-3.1-8B-Instruct', tokenizer_path='meta-llama/Llama-3.1-8B-Instruct', tokenizer_mode='auto', skip_tokenizer_init=False, load_format='auto', trust_remote_code=False, dtype='auto', kv_cache_dtype='auto', quantization=None, quantization_param_path=None, context_length=None, device='cuda', served_model_name='meta-llama/Llama-3.1-8B-Instruct', chat_template=None, is_embedding=False, revision=None, host='127.0.0.1', port=7501, mem_fraction_static=0.88, max_running_requests=None, max_total_tokens=None, chunked_prefill_size=2048, max_prefill_tokens=16384, schedule_policy='fcfs', schedule_conservativeness=1.0, cpu_offload_gb=0, page_size=1, tp_size=1, stream_interval=1, stream_output=False, random_seed=406826520, constrained_json_whitespace_pattern=None, watchdog_timeout=300, dist_timeout=None, download_dir=None, base_gpu_id=0, gpu_id_step=1, log_level='info', log_level_http=None, log_requests=False, log_requests_level=0, show_time_cost=False, enable_metrics=False, decode_log_interval=40, api_key=None, file_storage_path='sglang_storage', enable_cache_report=False, reasoning_parser=None, dp_size=1, load_balance_method='round_robin', ep_size=1, dist_init_addr=None, nnodes=1, node_rank=0, json_model_override_args='{}', lora_paths=None, max_loras_per_batch=8, lora_backend='triton', attention_backend='flashinfer', sampling_backend='flashinfer', grammar_backend='outlines', speculative_algorithm=None, speculative_draft_model_path=None, speculative_num_steps=5, speculative_eagle_topk=4, speculative_num_draft_tokens=8, speculative_accept_threshold_single=1.0, speculative_accept_threshold_acc=1.0, speculative_token_map=None, enable_double_sparsity=False, ds_channel_config_path=None, ds_heavy_channel_num=32, ds_heavy_token_num=256, ds_heavy_channel_type='qk', ds_sparse_decode_threshold=4096, disable_radix_cache=False, disable_cuda_graph=False, disable_cuda_graph_padding=False, enable_nccl_nvls=False, disable_outlines_disk_cache=False, disable_custom_all_reduce=False, disable_mla=False, disable_overlap_schedule=False, enable_mixed_chunk=False, enable_dp_attention=False, enable_ep_moe=False, enable_torch_compile=False, torch_compile_max_bs=32, cuda_graph_max_bs=8, cuda_graph_bs=None, torchao_config='', enable_nan_detection=False, enable_p2p_check=False, triton_attention_reduce_in_fp32=False, triton_attention_num_kv_splits=8, num_continuous_decode_steps=1, delete_ckpt_after_loading=False, enable_memory_saver=False, allow_auto_truncate=False, enable_custom_logit_processor=False, tool_call_parser=None, enable_hierarchical_cache=False, enable_flashinfer_mla=False, flashinfer_mla_disable_ragged=False, warmups=None, debug_tensor_dump_output_folder=None, debug_tensor_dump_input_file=None, debug_tensor_dump_inject=False)\n",
+      "config.json: 100%|█████████████████████████████| 855/855 [00:00<00:00, 6.25MB/s]\n",
+      "tokenizer_config.json: 100%|████████████████| 55.4k/55.4k [00:00<00:00, 128MB/s]\n",
+      "tokenizer.json: 100%|██████████████████████| 9.09M/9.09M [00:01<00:00, 6.33MB/s]\n",
+      "special_tokens_map.json: 100%|█████████████████| 296/296 [00:00<00:00, 2.28MB/s]\n",
+      "INFO 03-13 21:16:38 __init__.py:190] Automatically detected platform cuda.\n",
+      "INFO 03-13 21:16:38 __init__.py:190] Automatically detected platform cuda.\n"
      ]
     }
    ],
