--- a/papillion.ipynb
+++ b/papillion.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,46 @@
       "tokenizer.json: 100%|██████████████████████| 9.09M/9.09M [00:01<00:00, 6.33MB/s]\n",
       "special_tokens_map.json: 100%|█████████████████| 296/296 [00:00<00:00, 2.28MB/s]\n",
       "INFO 03-13 21:16:38 __init__.py:190] Automatically detected platform cuda.\n",
-      "INFO 03-13 21:16:38 __init__.py:190] Automatically detected platform cuda.\n"
+      "INFO 03-13 21:16:38 __init__.py:190] Automatically detected platform cuda.\n",
+      "[2025-03-13 21:16:46 TP0] Init torch distributed begin.\n",
+      "[2025-03-13 21:16:46 TP0] Init torch distributed ends. mem usage=0.00 GB\n",
+      "[2025-03-13 21:16:46 TP0] Load weight begin. avail mem=14.36 GB\n",
+      "[2025-03-13 21:16:46 TP0] Compute capability below sm80. Use float16 due to lack of bfloat16 support.\n",
+      "[2025-03-13 21:16:46 TP0] The following error message 'operation scheduled before its operands' can be ignored.\n",
+      "[2025-03-13 21:16:47 TP0] Scheduler hit an exception: Traceback (most recent call last):\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/scheduler.py\", line 1714, in run_scheduler_process\n",
+      "    scheduler = Scheduler(server_args, port_args, gpu_id, tp_rank, dp_rank)\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/scheduler.py\", line 218, in __init__\n",
+      "    self.tp_worker = TpWorkerClass(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/tp_worker_overlap_thread.py\", line 63, in __init__\n",
+      "    self.worker = TpModelWorker(server_args, gpu_id, tp_rank, dp_rank, nccl_port)\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/managers/tp_worker.py\", line 74, in __init__\n",
+      "    self.model_runner = ModelRunner(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_executor/model_runner.py\", line 166, in __init__\n",
+      "    self.initialize(min_per_gpu_memory)\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_executor/model_runner.py\", line 176, in initialize\n",
+      "    self.load_model()\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_executor/model_runner.py\", line 361, in load_model\n",
+      "    self.model = get_model(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_loader/__init__.py\", line 22, in get_model\n",
+      "    return loader.load_model(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_loader/loader.py\", line 358, in load_model\n",
+      "    model = _initialize_model(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/model_loader/loader.py\", line 139, in _initialize_model\n",
+      "    return model_class(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/models/llama.py\", line 377, in __init__\n",
+      "    self.lm_head = ParallelLMHead(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/layers/vocab_parallel_embedding.py\", line 530, in __init__\n",
+      "    super().__init__(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/layers/vocab_parallel_embedding.py\", line 304, in __init__\n",
+      "    self.quant_method.create_weights(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/sglang/srt/layers/vocab_parallel_embedding.py\", line 42, in create_weights\n",
+      "    torch.empty(\n",
+      "  File \"/home/coder/dev/hello-dspy/env/lib/python3.10/site-packages/torch/utils/_device.py\", line 106, in __torch_function__\n",
+      "    return func(*args, **kwargs)\n",
+      "torch.OutOfMemoryError: CUDA out of memory. Tried to allocate 1002.00 MiB. GPU 0 has a total capacity of 14.56 GiB of which 307.94 MiB is free. Including non-PyTorch memory, this process has 14.16 GiB memory in use. Of the allocated memory 14.04 GiB is allocated by PyTorch, and 1.49 MiB is reserved by PyTorch but unallocated. If reserved but unallocated memory is large try setting PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True to avoid fragmentation.  See documentation for Memory Management  (https://pytorch.org/docs/stable/notes/cuda.html#environment-variables)\n",
+      "\n",
+      "[2025-03-13 21:16:47] Received sigquit from a child process. It usually means the child failed.\n"
      ]
     }
    ],
