--- a/multihop.ipynb
+++ b/multihop.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,50 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Average Metric: 27.67 / 45 (61.5%):  28%|██▊       | 45/160 [00:50<01:59,  1.04s/it]"
+      "Average Metric: 97.00 / 160 (60.6%): 100%|██████████| 160/160 [03:24<00:00,  1.28s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 21:39:19 INFO dspy.evaluate.evaluate: Average Metric: 97.00000000000001 / 160 (60.6%)\n",
+      "2025/03/13 21:39:19 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5, 62.29, 64.79, 65.0, 62.08, 59.79, 63.54, 60.63]\n",
+      "2025/03/13 21:39:19 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 65.0\n",
+      "2025/03/13 21:39:19 INFO dspy.teleprompt.mipro_optimizer_v2: =======================\n",
+      "2025/03/13 21:39:19 INFO dspy.teleprompt.mipro_optimizer_v2: \n",
+      "\n",
+      "2025/03/13 21:39:19 INFO dspy.teleprompt.mipro_optimizer_v2: == Trial 33 / 32 - Minibatch ==\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Average Metric: 25.00 / 40 (62.5%): 100%|██████████| 40/40 [00:42<00:00,  1.06s/it]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/13 21:40:01 INFO dspy.evaluate.evaluate: Average Metric: 24.999999999999996 / 40 (62.5%)\n",
+      "2025/03/13 21:40:01 INFO dspy.teleprompt.mipro_optimizer_v2: Score: 62.5 on minibatch of size 40 with parameters ['Predictor 0: Instruction 8', 'Predictor 0: Few-Shot Set 2', 'Predictor 1: Instruction 5', 'Predictor 1: Few-Shot Set 2'].\n",
+      "2025/03/13 21:40:01 INFO dspy.teleprompt.mipro_optimizer_v2: Minibatch scores so far: [64.17, 54.17, 65.83, 51.67, 50.83, 67.5, 62.5, 68.33, 67.5, 59.17, 64.17, 54.17, 57.5, 54.17, 62.5, 55.83, 60.0, 65.0, 61.67, 64.17, 57.5, 28.33, 62.5, 62.5]\n",
+      "2025/03/13 21:40:01 INFO dspy.teleprompt.mipro_optimizer_v2: Full eval scores so far: [29.58, 62.5, 62.29, 64.79, 65.0, 62.08, 59.79, 63.54, 60.63]\n",
+      "2025/03/13 21:40:01 INFO dspy.teleprompt.mipro_optimizer_v2: Best full score so far: 65.0\n",
+      "2025/03/13 21:40:01 INFO dspy.teleprompt.mipro_optimizer_v2: ==========================================\n",
+      "\n",
+      "\n",
+      "2025/03/13 21:40:01 INFO dspy.teleprompt.mipro_optimizer_v2: Returning best identified program with score 65.0!\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -1444,12 +1487,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "evaluate(Hop())"
+    "optimized.save(\"optimized_multihop.json\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 52.00 / 78 (66.7%):  26%|██▌       | 78/300 [02:16<03:15,  1.14it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "evaluate(optimized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
